# TunnelEscape

./: .gitignore  Doxyfile  Readme.md
app/: CMakeLists.txt  Readme.md  build.gradle
app/src/androidTest/java/games/tunnelescape/tunnelescape/: ExampleInstrumentedTest.java  PhysicsPropertiesInstrumentedTest.java  RectfInstumentedTest.java  ShapeInstrumentedTest.java  Vector2fInstrumentedTest.java  WorldWrapperInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Bonus level: free flying.tescape  Escape begins.tescape  Inferno.tescape  Intro.tescape  Level1.tescape  The final escape.tescape  Tunnel darkens.tescape
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/cpp_java_wrappers/: WorldWrapper.cpp  WorldWrapper.hpp  WorldWrapper.i  WorldWrapper_wrap.cxx  info.txt  wrap.sh
app/src/main/cpp/jns/: CollisionDetection.cpp  CollisionDetection.hpp  DynamicObject.cpp  DynamicObject.hpp  PhysicsGrid.cpp  PhysicsGrid.hpp  PhysicsObject.cpp  PhysicsObject.hpp  PhysicsProperties.cpp  PhysicsProperties.hpp  PhysicsProperties.i  PhysicsProperties_wrap.cxx  PhysicsWorld.cpp  PhysicsWorld.hpp  Rect.cpp  Rect.hpp  Rect.i  Rect_wrap.cxx  Shape.cpp  Shape.hpp  Shape.i  Shape_wrap.cxx  StaticObject.cpp  StaticObject.hpp  Vector2.cpp  Vector2.hpp  Vector2.i  Vector2_wrap.cxx  jns_malli.txt
app/src/main/cpp/physics/: CollisionDetection.cpp  CollisionDetection.hpp  DynamicObject.cpp  PhysicsGrid.cpp  PhysicsGrid.hpp  PhysicsObject.hpp  PhysicsProperties.cpp  PhysicsProperties.i  PhysicsProperties_wrap.cxx  PhysicsWorld.cpp  PhysicsWorld.hpp  Rect.cpp  Rect.i  Rect_wrap.cxx  Shape.i  Shape_wrap.cxx  StaticObject.cpp  StaticObject.hpp  Vector2.cpp  Vector2.i  Vector2_wrap.cxx  wrap_physics.sh
app/src/main/java/com/westerholmgmail/v/lauri/UI/: GameScreen.java  (+6 more)
app/src/main/java/games/tunnelescape/UI/: GameScreen.java  GameState.java  MainMenu.java  MenuScreen.java  OnSwipeListener.java  RegisterDialogFragment.java  StatsView.java
app/src/main/java/games/tunnelescape/tunnelescape/: AIPlayer.java  GameEngine.java  GameLoop.java  ObjectStatus.java  Pair.java  PairDeque.java  PhysicsProperties.java  PhysicsPropertiesModule.java  PhysicsPropertiesModuleJNI.java  Rect.java  RectJNI.java  Rectf.java  Recti.java  Shape.java  ShapeModule.java  ShapeModuleJNI.java  SinglePlayer.java  Vector2.java  Vector2JNI.java  Vector2f.java  Vector2fDeque.java  Vector2fDoublePair.java  Vector2fVector.java  Vector2i.java  WorldWrapper.java  WorldWrapperModule.java  WorldWrapperModuleConstants.java  WorldWrapperModuleJNI.java
app/src/main/java/games/tunnelescape/tunnelescape/objects/: GameObject.java  ImageObject.java  ObjectType.java  PlayerObject.java  StaticObject.java  TreasureObject.java
app/src/main/res/drawable/: ic_locked.xml  ic_tunnelescape_title.xml  layout_divider.xml
app/src/main/res/layout/: activity_menu_screen.xml  level_select_layout.xml  lose_screen_layout.xml  main_menu_layout.xml  settings_menu.xml  single_player_layout.xml  user_register_layout.xml  win_screen_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/games/tunnelescape/tunnelescape/: ExampleUnitTest.java
(+90 files in other folders)
